--- a/src/assets/css/icon.scss
+++ b/src/assets/css/icon.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family:"iconfont";
   /* Project id 3789743 */
-  src: url('//at.alicdn.com/t/c/font_3789743_ip9ow4y94l.woff2?t=1669257130329') format('woff2'), url('//at.alicdn.com/t/c/font_3789743_ip9ow4y94l.woff?t=1669257130329') format('woff'), url('//at.alicdn.com/t/c/font_3789743_ip9ow4y94l.ttf?t=1669257130329') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_3789743_19dne1ig48z.woff2?t=1669381740889') format('woff2'), url('//at.alicdn.com/t/c/font_3789743_19dne1ig48z.woff?t=1669381740889') format('woff'), url('//at.alicdn.com/t/c/font_3789743_19dne1ig48z.ttf?t=1669381740889') format('truetype');
 }
 .iconfont {
   font-family:"iconfont" !important;
@@ -9,6 +9,30 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.icon-chahao:before {
+  content:"\e603";
+}
+.icon-31shijian:before {
+  content:"\e601";
+}
+.icon-yanjing:before {
+  content:"\e6ce";
+}
+.icon-pinglun:before {
+  content:"\e663";
+}
+.icon-jinrujiantou:before {
+  content:"\e88e";
+}
+.icon-liebiao:before {
+  content:"\e600";
+}
+.icon-biaoqian:before {
+  content:"\e63d";
+}
+.icon-caidan:before {
+  content:"\e668";
 }
 .icon-sousuo:before {
   content:"\e651";
