--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,4 +1,97 @@
 :root {
-  --theme-bg-color: #F4F6F8;
+  --theme-bg-color: #f4f6f8;
   --main-width: 76rem;
+}
+
+@media screen and (max-width: 1250px) {
+  :root {
+    --main-width: 100%;
+  }
+}
+
+@media screen and (min-width: 640px) {
+  .left .title {
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 855px) {
+  .left .title {
+    display: flex;
+  }
+  .nav .search {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 640px) {
+  .banner img {
+    width: 51.5625rem;
+    height: 32.1875rem;
+  }
+  .icon_btn {
+    display: none;
+  }
+  li span {
+    margin-right: 0.8rem;
+  }
+  li p {
+    line-height: 1.65rem;
+  }
+  li .pic_content img {
+    width: 13rem;
+    height: 8.125rem;
+  }
+  footer {
+    padding: 3rem 0;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .left {
+    padding-left: 0.5rem;
+  }
+  .left .title {
+    display: none;
+  }
+  .banner img {
+    width: 100%;
+  }
+  .icon_btn {
+    display: block;
+    margin-right: 1rem;
+  }
+  .icon_btn i {
+    font-size: 1.6rem;
+    color: #145914;
+  }
+  body {
+    font-size: 0.81rem;
+  }
+  ul li .other {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  ul li .other span {
+    margin-right: 0.5rem;
+  }
+  ul li p {
+    line-height: 1.2rem;
+    padding-right: 0.5rem;
+  }
+  ul li .pic_content img {
+    width: 9rem;
+  }
+  footer {
+    padding: 2rem 0;
+  }
+}
+
+@media screen and (max-width: 1160px) {
+  .col_sec {
+    display: none;
+  }
+  .banner img {
+    width: 100%;
+  }
 }
