--- a/src/assets/css/icon.css
+++ b/src/assets/css/icon.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "iconfont";
   /* Project id 3789743 */
-  src: url("//at.alicdn.com/t/c/font_3789743_igehyxzzdcg.woff2?t=1670335795810") format("woff2"), url("//at.alicdn.com/t/c/font_3789743_igehyxzzdcg.woff?t=1670335795810") format("woff"), url("//at.alicdn.com/t/c/font_3789743_igehyxzzdcg.ttf?t=1670335795810") format("truetype");
+  src: url("//at.alicdn.com/t/c/font_3789743_kxdivp0lku8.woff2?t=1670905897436") format("woff2"), url("//at.alicdn.com/t/c/font_3789743_kxdivp0lku8.woff?t=1670905897436") format("woff"), url("//at.alicdn.com/t/c/font_3789743_kxdivp0lku8.ttf?t=1670905897436") format("truetype");
 }
 
 .iconfont {
@@ -10,6 +10,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-ziyuanxhdpi:before {
+  content: "\e62d";
+}
+
+.icon-liuyanban:before {
+  content: "\e611";
+}
+
+.icon-liuyan-A:before {
+  content: "\e61c";
+}
+
+.icon-w_yunduan:before {
+  content: "\e682";
 }
 
 .icon-zhixiangzuo:before {
